fix reclout in thread not showing up

--- a/src/app/post-thread-page/post-thread/post-thread.component.scss
+++ b/src/app/post-thread-page/post-thread/post-thread.component.scss
@@ -4,7 +4,6 @@
     border-radius: 30px;
     box-shadow: 0px 0.9343936443328857px 15px rgba(0, 0, 0, 0.05);
     z-index: 1;
-    overflow: hidden;
 }
 .post-thread_comment {
     background: #ffffff;
